UI fix: Slide Nav menu title and subtitle alignment fix for long subtitle...

--- a/ReckonMobileDev05/resources/sass/app.scss
+++ b/ReckonMobileDev05/resources/sass/app.scss
@@ -1404,7 +1404,17 @@ rm-emailinvoicebackground{
       
 }
 
+.rm-slidenav-menu-title{
+    margin-top: -5px; 
+    margin-left: -1px;
+    text-align: left;
+}
 
+.rm-slidenav-menu-subtitle{
+    font-size: 13px; 
+    margin-top: -25px; 
+    float: left; 
+}
 
 .x-list.x-slidenavigation-list{  
        
